nearly finished the project but couldnt find a way to stop the site wrapping itself

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
  display:flex;
  flex-direction:column;
  font-family: Roboto, Arial, Helvetica, sans-serif;
+margin-left:250px;
+margin-right:250px;
+background-color:rgba(0, 0, 0, 0.932);
+
 }
 
 /*header styling*/
@@ -38,7 +42,7 @@ ul {
     font-weight:bolder;
     color:#f9faf8;
     margin-bottom: 0px;
-    
+       
     
 }
 
@@ -58,6 +62,7 @@ ul {
     padding-bottom: 120px;
     padding-top:120px;
     color:#f9faf8;
+    padding:100px 200px 100px 200px; 
    
 }
 
@@ -72,6 +77,7 @@ ul {
 /*center of the page style*/
 
 .center {
+    background-color:white;
     display:flex;
     flex-direction:column;
     padding:50px 50px 50px 50px;
@@ -103,6 +109,61 @@ figure {
     
     border:solid 4px #3882f6;
     
+}
+
+/* quote section*/
+
+.quotecont {
+    text-align:center;
+    background-color:#e5e7eb;
+    padding: 150px 200px 150px 200px;
+    font-size: 36px;
+    font-style: italic;
+    color:#1f2937;
+}
+
+ .signature {
+    text-align:right;
+    font-size:20px;
+    padding-top:50px;
+}
+
+.container {
+    background-color:white;
+    text-align: center;
+    
+}
+
+.calltoact {
+    display:flex;
+    flex-direction:column;
+    text-align: left;
+    align-items:space-between;
+    background-color:#3882f6;
+    color:white;
+    margin:100px auto;
+    padding:30px 100px;
+    width:800px;
+    height:100px;
     
     
 }
+ .button4 {
+    
+    border:white solid;
+    display: flex;
+    justify-content: right;
+    margin-left:auto;
+    padding:5px 20px;
+    
+}
+
+.footer {
+    padding:40px;
+    background-color:#1f2937;
+    text-align: center;
+    color:white;
+}
+
+
+
